apps/makemkv/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: all-drives
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
