apps/makemkv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: makemkv-drive0
  namespace: makemkv
spec:
  selector:
    app: makemkv
    drive-serial: BP52225B18130019
  ports:
    - name: web
      port: 5800
      protocol: TCP
      targetPort: 5800
---
apiVersion: v1
kind: Service
metadata:
  name: makemkv-drive1
  namespace: makemkv
spec:
  selector:
    app: makemkv
    drive-serial: BP52225B18133253
  ports:
    - name: web
      port: 5801
      protocol: TCP
      targetPort: 5800
---
apiVersion: v1
kind: Service
metadata:
  name: makemkv-drive2
  namespace: makemkv
spec:
  selector:
    app: makemkv
    drive-serial: BP52425B18130826
  ports:
    - name: web
      port: 5802
      protocol: TCP
      targetPort: 5800
---
apiVersion: v1
kind: Service
metadata:
  name: makemkv-drive3
  namespace: makemkv
spec:
  selector:
    app: makemkv
    drive-serial: BP52524422173906
  ports:
    - name: web
      port: 5803
      protocol: TCP
      targetPort: 5800
---
apiVersion: v1
kind: Service
metadata:
  name: makemkv-drive4
  namespace: makemkv
spec:
  selector:
    app: makemkv
    drive-serial: BP52225C07131304
  ports:
    - name: web
      port: 5804
      protocol: TCP
      targetPort: 5800
---
apiVersion: v1
kind: Service
metadata:
  name: makemkv-drive5
  namespace: makemkv
spec:
  selector:
    app: makemkv
    drive-serial: BP52D24A16083824
  ports:
    - name: web
      port: 5805
      protocol: TCP
      targetPort: 5800
---
apiVersion: v1
kind: Service
metadata:
  name: makemkv-drive6
  namespace: makemkv
spec:
  selector:
    app: makemkv
    drive-serial: BP52E25510161815
  ports:
    - name: web
      port: 5806
      protocol: TCP
      targetPort: 5800
---
apiVersion: v1
kind: Service
metadata:
  name: makemkv-drive7
  namespace: makemkv
spec:
  selector:
    app: makemkv
    drive-serial: BP52E25512093803
  ports:
    - name: web
      port: 5807
      protocol: TCP
      targetPort: 5800
