apps/makemkv/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: makemkv
  namespace: makemkv
spec:
  endpointSelector:
    matchLabels:
      app: makemkv
  ingress:
    - fromEntities: [world, remote-node]
      toPorts:
        - ports: [{ port: "5800", protocol: TCP }]
  egress:
    - toEntities: [host]
      toPorts:
        - ports: [{ port: "53", protocol: ANY }]
          rules:
            dns: [{ matchPattern: "*" }]
    - toFQDNs:
        - matchName: "makemkv.com"
        - matchPattern: "*.makemkv.com"
      toPorts:
        - ports: [{ port: "443", protocol: TCP }]
